2008-02-11  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_procs_multi: initial release
