@@ -1,1 +1,2 @@
-2008-02-11: 0.9.0 initial testing release
+2008-02-12: 0.9.1  default: min 1 process
+2008-02-11: 0.9.0  initial testing release
